<resources>
    <string name="app_name">android4-1</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_notes_list">Notes List</string>
    <string name="notes_fragment_text">New note:</string>
    <string name="notes_fragment_title">Title</string>
    <string name="notes_fragment_project">Project</string>
    <string name="notes_fragment_description">Description</string>
    <string name="notes_fragment_btn">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_edit_btn">Edit</string>
    <string name="profile_save_btn">Save</string>
    <string name="profile_name_hint">Enter your name</string>
    <string name="profile_login_hint">Enter your login</string>
    <string name="project_name_hint">Enter name of project</string>
    <string name="project_date_hint">Choose the end of project</string>
    <!-- Bottom sheet project types -->
    <string name="project_types_home">Home</string>
    <string name="project_types_work">Work</string>
    <string name="project_types_school">School</string>
    <!-- Drawer strings -->
    <string name="drawer_menu_open">Open</string>
    <string name="drawer_menu_close">Close</string>
    <!-- Auth -->
    <string name="auth_sign_up_btn">Sign Up</string>
    <string name="auth_sign_in_btn">Sign In</string>
    <string name="auth_login_hint">Enter your login</string>
    <string name="auth_password_hint">Enter your password</string>
    <!-- Notification -->
    <string name="channel_name">Channel name</string>
    <string name="channel_description">CHANNEL Description</string>
    <string name="channel_id">DEFAULT_CHANNEL_ID</string>
</resources>