<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.note.NoteFragment">
    <TextView
        android:id="@+id/tv_new_note"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes_fragment_text"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textSize="32sp"
        android:textColor="@color/black"
        />
<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/til_title"
    app:layout_constraintTop_toBottomOf="@+id/tv_new_note"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginTop="8dp"
    android:contentDescription="@string/notes_fragment_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:labelFor="@+id/tv_title"
    android:layerType="hardware"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:hint="@string/notes_fragment_title"
    android:paddingHorizontal="16dp">

    <EditText
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="24sp" />
</com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintTop_toBottomOf="@+id/til_title"
        android:id="@+id/til_desc"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/notes_fragment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/tv_note_fragment"
        android:layerType="hardware"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/notes_fragment_description"
        android:paddingHorizontal="16dp">

        <EditText
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintTop_toBottomOf="@+id/til_desc"
        android:id="@+id/til_project"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/notes_fragment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/tv_note_fragment"
        android:layerType="hardware"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/notes_fragment_project"
        android:paddingHorizontal="16dp">

        <EditText
            android:id="@+id/tv_project"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <Spinner
        app:layout_constraintTop_toBottomOf="@+id/til_project"
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="16dp"
        android:padding="16dp"
        android:background="@drawable/spinner_border"
        android:layout_height="wrap_content"/>
    <com.google.android.material.button.MaterialButton
        app:layout_constraintTop_toBottomOf="@+id/til_project"
        android:id="@+id/btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes_fragment_btn"
        app:icon="@drawable/ic_add_24"
        />
</androidx.constraintlayout.widget.ConstraintLayout>