<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.AuthFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">

        <LinearLayout
            android:id="@+id/ll_switch_btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:weightSum="2"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_choose_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/purple_500"
                    android:text="@string/auth_sign_in_btn"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_choose_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:text="@string/auth_sign_up_btn"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/et_sign_up_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:gravity="center"
            android:hint="@string/auth_login_hint"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/ll_switch_btns"
            tools:text="Alex Marshall" />

        <EditText
            android:id="@+id/et_sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:hint="@string/auth_password_hint"
            android:inputType="textPassword"
            android:textColor="@color/grey_text"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/et_sign_up_login"
            tools:text="Alex Marshall" />

        <Button
            android:id="@+id/btn_registration_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/auth_sign_in_btn"
            app:layout_constraintTop_toBottomOf="@id/et_sign_up_password" />

        <com.google.android.gms.common.SignInButton
            app:layout_constraintTop_toBottomOf="@+id/btn_registration_user"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/btn_google_sign_in"
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_500"
            android:background="@color/purple_500"
            android:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>